<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="#99D578">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/editar_info"
        android:textColor="@color/green0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/namet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/nombre"
        android:textColor="@color/forest_green3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lastnamet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namet"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/apellidos"
        android:textColor="@color/forest_green3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emailt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastnamet"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/correo"
        android:textColor="@color/forest_green3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/carnett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailt"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/carnet"
        android:textColor="@color/forest_green3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phonet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carnett"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/tel_fono"
        android:textColor="@color/forest_green3"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="5dp"
        android:background="@color/forest_greenA"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/guardar"
        android:textColor="@color/lime_green" />

    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/forest_greenA"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cancelar"
        android:textColor="@color/lime_green" />


</RelativeLayout>