<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_home" />

    <TextView
        android:id="@+id/productos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/productos"
        android:textColor="@color/green0"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/servicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/servicios"
        android:textColor="@color/green0"
        android:textSize="30sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/bpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productos"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="20dp"
        android:text="@string/comprar"
        android:textColor="@color/green0"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/bproducts"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/productos"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/x"
        android:src="@drawable/sproducts" />

    <TextView
        android:id="@+id/spt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bproducts"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="20dp"
        android:text="@string/vender"
        android:textColor="@color/green0"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/sproducts"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/bproducts"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/x"
        android:src="@drawable/bproducts" />

    <TextView
        android:id="@+id/bst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productos"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:text="@string/comprar"
        android:textColor="@color/green0"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/bservices"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/servicios"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:contentDescription="@string/x"
        android:src="@drawable/bservices" />

    <TextView
        android:id="@+id/sst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bservices"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/vender"
        android:textColor="@color/green0"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/sservices"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_below="@+id/bservices"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:contentDescription="@string/x"
        android:src="@drawable/sservices" />

</RelativeLayout>